--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html>
-    <body>
-        <h1> calculadora do tigas </h1>
-    </body>
+  <body>
+    <h1>calculadora do tigas</h1>
+
+    <input type="text">
+  </body>
 </html>
