--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1>calculadora do tigas</h1>
-    
+    <button onclick="calcular()">Calcular</button>
     <p>Digite n1</p>
     
     <input type="text" id="n1">
@@ -18,6 +18,7 @@
     <h1 id="saida"> </h1>
   </body>
 </html>
+
 
 
 
