--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    
+    <link rel="stylesheet" href="style.css">
     <h1>calculadora do tigas</h1>
     
     <p>Digite n1</p>
@@ -23,6 +23,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
