--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <body>
     <link rel="stylesheet" href="style.css">
     <h1>calculadora do tigas</h1>
+
+    <h1 id="n1"> </h1>
+    <h1>   </h1>
+    <h1 id="md"> </h1>
+    <h1>   </h1>
+    <h1 id="n2"> </h1>
+    <h1> = </h1>
+    <h1 id="saida"> </h1>
+    
     <button onclick="sete()">7</button>
     <button onclick="oito()">8</button>
     <button onclick="nove()">9</button>
@@ -11,18 +20,18 @@
     <button onclick="quatro()">4</button>
     <button onclick="cinco()">5</button>
     <button onclick="seis()">6</button>
+    <button onclick="8()">8</button>
     <br><br>
     <button onclick="um()">1</button>
     <button onclick="dois()">2</button>
     <button onclick="tres()">3</button>
     <br><br>
     <button onclick="result()">=</button>
-
-    <h1 id="saida"> </h1>
     
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
