--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
     <button onclick="quatro()">4</button>
     <button onclick="cinco()">5</button>
     <button onclick="seis()">6</button>
-    <button onclick="8()">8</button>
+    <button onclick="menos()">-</button>
     <br><br>
     <button onclick="um()">1</button>
     <button onclick="dois()">2</button>
     <button onclick="tres()">3</button>
+    <button onclick="mult()">*</button>
     <br><br>
     <button onclick="result()">=</button>
+    <button onclick="div()">/</button>
     
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
