--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <link rel="stylesheet" href="style.css">
     <h1>calculadora do tigas</h1>
 
-    <h1 id="n1"> </h1>
-    <h1>   </h1>
-    <h1 id="md"> </h1>
-    <h1>   </h1>
-    <h1 id="n2"> </h1>
-    <h1> = </h1>
-    <h1 id="saida"> </h1>
+    <h1> 
+    <span id="n1"> </span>
+    <span>   </span>
+    <span id="md"> </span>
+    <span >   </span>
+    <span id="n2"> </span>
+    <span>   </span>
+    <span id="result"></span>
+    </h1>
     
     <button onclick="sete()">7</button>
     <button onclick="oito()">8</button>
@@ -33,3 +35,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
