Fix HTML structure and add missing equals sign

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <span id="md"> </span>
     <span >   </span>
     <span id="n2"> </span>
-    <span>   </span>
+    <span> = </span>
     <span id="result"></span>
     </h1>
     
@@ -35,4 +35,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
