--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <span >   </span>
     <span id="n2"> </span>
     <span> = </span>
-    <span id="result"></span>
+    <span id="saida"></span>
     </h1>
     
     <button onclick="sete()">7</button>
@@ -35,5 +35,6 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
