--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <img src="iflogo.png alt="logo if">
+    <img src="iflogo.png width="3000">
     <link rel="stylesheet" href="style.css">
     <h1>calculadora do tigas</h1>
 
@@ -36,6 +36,7 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
 
 
