Refactor index.html structure and update title

--- a/index.html
+++ b/index.html
@@ -1,43 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <body>
-    <img src="iflogo.png width="3000">
-    <link rel="stylesheet" href="style.css">
-    <h1>calculadora do tigas</h1>
+<head>
+  <meta charset="UTF-8">
+  <title>Programa Sabará</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <h1> 
-    <span id="n1"> </span>
-    <span>   </span>
-    <span id="md"> </span>
-    <span >   </span>
-    <span id="n2"> </span>
-    <span> = </span>
-    <span id="saida"></span>
-    </h1>
-    
-    <button onclick="sete()">7</button>
-    <button onclick="oito()">8</button>
-    <button onclick="nove()">9</button>
-    <button onclick="mais()">+</button>
-    <br><br>
-    <button onclick="quatro()">4</button>
-    <button onclick="cinco()">5</button>
-    <button onclick="seis()">6</button>
-    <button onclick="menos()">-</button>
-    <br><br>
-    <button onclick="um()">1</button>
-    <button onclick="dois()">2</button>
-    <button onclick="tres()">3</button>
-    <button onclick="mult()">*</button>
-    <br><br>
-    <button onclick="result()">=</button>
-    <button onclick="div()">/</button>
-    
-    <script src="script.js"></script>
-  </body>
+<body>
+
+  <div class="topo">
+    <div class="logos">
+      <img src="logo_sabara.png" class="logo">
+      <img src="logo_if.png" class="logo">
+    </div>
+
+    <div class="titulo">
+      <h1>Programa Sabará</h1>
+      <h2>Painel de Progresso do Aluno</h2>
+    </div>
+  </div>
+
+</body>
 </html>
-
-
-
-
-
