--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
 
   <div class="topo">
+    
     <div class="logos">
-      <img src="logo_sabara.png" class="logo">
-      <img src="logo_if.png" class="logo">
+      <img src="programalogo.png" class="logo">
+      <img src="iflogo.png" class="logo">
     </div>
 
     <div class="titulo">
       <h1>Programa Sabará</h1>
       <h2>Painel de Progresso do Aluno</h2>
     </div>
+
   </div>
 
 </body>
