--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Programa Sabará</title>
+  <title>Programa Sabará | Inicio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,3 +24,4 @@
 
 </body>
 </html>
+
