--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 
 .logo {
-  width: 150px; /* aumenta aqui se quiser maior */
+  width: 180px;
   height: auto;
 }
 
@@ -42,3 +42,4 @@ body {
   margin: 0;
   text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
 }
+
