Update logo classes in index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 
   <div class="topo">
     <div class="logos">
-      <img src="programalogo.png" class="logo">
-      <img src="iflogo.png" class="logo">
+      <img src="programalogo.png" class="logo-programa">
+      <img src="iflogo.png" class="logo-if">
     </div>
   </div>
 
