--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
-<body>
-
-  <div class="topo">
-    <div class="logos">
-      <img src="programalogo.png" class="logo-programa">
-      <img src="iflogo.png" class="logo-if">
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Programa Sabará | Inicio</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    
+    <div class="topo">
+      
+      <div class="logos">
+        <img src="programalogo.png" class="logo">
+        <img src="iflogo.png" class="logo">
+      </div>
     </div>
   </div>
-
-  <div class="banner">
-    <h1>Meus Progressos</h1>
-  </div>
-
-</body>
+  </body>
+</html>
