Add banner section with heading to index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
     <div class="topo">
-      
+      <div class="banner">
+        <h1>Meus Progressos</h1>
+      </div>
       <div class="logos">
         <img src="programalogo.png" class="logo">
         <img src="iflogo.png" class="logo">
@@ -17,3 +18,4 @@
   </div>
   </body>
 </html>
+
