--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
   </div>
   </body>
    <div class="banner">
-        <h1>Meus Progressos</h1>
+        <h1>Banner</h1>
   </div>
 </html>
+
 
 
 
