Refactor index.html for better readability
Reformatted HTML structure and fixed indentation.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,12 @@
     <meta charset="UTF-8">
     <title>Programa Sabará | Inicio</title>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <div class="topo">
-      <div class="logos">
-        <img src="programalogo.png" class="logo">
-        <img src="iflogo.png" class="logo">
-      </div>
+  </head> <body> <div class="topo">
+    <div class="logos">
+      <img src="programalogo.png" class="logo">
+      <img src="iflogo.png" class="logo">
+    </div>
+  </div>
+  </div>
   </body>
 </html>
-
-
-
-
-
-
-
