--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head> <body> <div class="topo">
     <div class="logos">
-      <img src="programalogo.png" class="logo">
-      <img src="iflogo.png" class="logo">
+      <img src="programalogo.png" class="logo" height="70">
+      <img src="iflogo.png" class="logo" height="70">
     </div>
   </div>
   </div>
   </body>
 </html>
+
