--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Programa Sabará | Inicio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
   </head>
    <body> 
     <div class="topo">
@@ -23,7 +23,7 @@
     </div>
 
     <div class="banner">
-      <h1> Progresso da Turma </h1>
+      <h1> Sobre </h1>
     </div>
     
   </div>
