--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Programa Sabará | Inicio</title>
+    <title>Programa Sabará | Sobre</title>
     <link rel="stylesheet" href="style2.css">
   </head>
    <body> 
@@ -25,7 +25,14 @@
     <div class="banner">
       <h1> Sobre </h1>
     </div>
-    
+
+  </div>
+
+  <div class="about">
+    <p> O Programa Sabará – Módulo Equidade Racial é uma<br>iniciativa que oferece aulas de programação para<br>meninas pretas e pardas, com o objetivo de ampliar<br>o acesso à tecnologia e desenvolver habilidades digitais.<br>O projeto fortalece a autoconfiança e o protagonismo das<br>participantes, incentivando que elas se reconheçam em uma<br>área ainda majoritariamente ocupada por homens brancos,<br>promovendo assim mais diversidade e equidade no setor de<br>tecnologia.</p>
+    <img src="ps1.jpg" class="img1">
+    <img src="ps2.jpeg" class="img2">
+    <img src="ps3.jpeg" class="img3">
   </div>
   </body>
 </html>
